# cedilla

./: Cargo.toml  README.md  cargo-sources.json  dev.mariinkys.Cedilla.json  justfile
frostmark/: Cargo.toml
frostmark/src/: lib.rs  renderer.rs  state.rs  structs.rs  typst_world.rs
frostmark/src/renderer/: typst.rs
i18n/cs/: cedilla.ftl
i18n/en/: cedilla.ftl
i18n/tr/: cedilla.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  flags.rs  i18n.rs  icons.rs  key_binds.rs  main.rs
src/app/: app_menu.rs  context_page.rs  update.rs
src/app/core/: editor.rs  project.rs  utils.rs
src/app/core/utils/: files.rs  markdown.rs  pdf.rs  scroll.rs  search.rs
src/app/update/: config.rs  dialog.rs  editor.rs  file.rs  menu.rs  others.rs  preview.rs  ui.rs  vault.rs
widgets/src/: text_editor.rs
