[package]
name = "cedilla"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0"
description = "A markdown text editor for the COSMIC™ desktop"
repository = "https://github.com/mariinkys/cedilla"

[[bin]]
path = "src/main.rs"
name = "cedilla"

[dependencies]
# LibCOSMIC Dependencies
libcosmic.workspace = true
futures-util.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
open.workspace = true
rust-embed.workspace = true

# Various Dependencies
serde.workspace = true
tokio.workspace = true
anywho.workspace = true
dirs.workspace = true
ignore.workspace = true
slotmap.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
url.workspace = true
dissimilar.workspace = true
icu.workspace = true

# PDF Generation Generation
gotenberg_pdf.workspace = true
base64.workspace = true
regex.workspace = true
pulldown-cmark.workspace = true

# Local Dependencies
frostmark = { path = "frostmark" }
widgets = { path = "widgets" }

[workspace]
members = [".","frostmark", "widgets"]

[workspace.dependencies]
futures-util = "0.3.32"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.3"
rust-embed = "8.11.0"

# Added by me
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["fs"] }
anywho = "0.1.2"
dirs = "6.0.0"
ignore = "0.4.25"
icu = { version = "2.1.1", features = ["compiled_data"] }
slotmap = "1.1.1"
percent-encoding = "2.3.2"
reqwest = "0.13.2"
url = "2.5.8"
base64 = "0.22.1"
regex = "1.12.3"
pulldown-cmark = "0.13.1"
dissimilar = "1.0.10"
gotenberg_pdf = { git = "https://github.com/mariinkys/gotenberg_pdf" }

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
   "a11y",
   # About widget for the app
   "about",
   # Uses cosmic-settings-daemon to watch for config file changes
   "dbus-config",
   # Support creating additional application windows.
   "multi-window",
   # On app startup, focuses an existing instance if the app is already open
   "single-instance",
   # Uses tokio as the executor for the runtime
   "tokio",
   # Windowing support for X11, Windows, Mac, & Redox
   "winit",
   # Add Wayland support to winit
   "wayland",
   # GPU-accelerated rendering
   "wgpu",
   # XDG portal integration for Flatpak theme detection
   "xdg-portal",
   # Highlighter support
   "highlighter",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
# codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
